--- a/guides/integration-and-best-practices/ci-integration.mdx
+++ b/guides/integration-and-best-practices/ci-integration.mdx
@@ -1,246 +1,174 @@
 ---
-title: "Integrating with Continuous Integration (CI)"
-description: "Explains how to run GoogleTest as part of CI pipelines, generate machine-readable output, and troubleshoot CI test failures. Covers typical configurations and platform-specific advice."
+title: "Continuous Integration: Running Tests Automatically"
+description: "Integrate GoogleTest and GoogleMock with CI systems. Covers reporting, test selection, and artifacts to ensure robust automation across platforms."
 ---
 
-# Integrating with Continuous Integration (CI)
+# Continuous Integration: Running Tests Automatically
 
 ## Workflow Overview
 
-GoogleTest is designed to seamlessly integrate into Continuous Integration (CI) pipelines, enabling automated execution of tests with machine-readable output. This guide helps you configure GoogleTest for CI environments, generate parsable test reports, handle typical platform-specific setups, and troubleshoot common CI-related issues.
+Automation is essential for maintaining software quality at scale. This guide walks you through integrating GoogleTest and GoogleMock into your Continuous Integration (CI) systems, ensuring your tests run reliably and report meaningful results automatically across platforms.
 
 ### Prerequisites
-
-- A working GoogleTest build of your test binaries.
-- Basic familiarity with running tests manually from the command line.
-- Access to your CI environment's configuration (e.g., Jenkins, GitHub Actions, GitLab CI).
+- GoogleTest and GoogleMock installed and successfully building in your development environment.
+- Basic familiarity with running GoogleTest test binaries.
+- A working CI environment (e.g., Jenkins, GitHub Actions, GitLab CI, Travis CI).
 
 ### Expected Outcome
-
-By following this guide, you will successfully:
-
-- Execute GoogleTest binaries as part of automated CI runs.
-- Generate output in formats compatible with CI reporting tools.
-- Detect and diagnose common causes of CI test failures.
-- Apply platform-appropriate configurations for reliable test execution.
+By following this guide, you will be able to run GoogleTest-based tests automatically in your CI pipelines, configure reporting of test results, selectively run tests, and collect artifacts to support troubleshooting and quality monitoring.
 
 ### Time Estimate
-
-15-30 minutes depending on your CI system and project complexity.
+20-40 minutes to set up basic automation and configure reporting.
 
 ### Difficulty Level
-
-Intermediate — requires understanding of both GoogleTest execution and CI pipeline configuration.
+Intermediate—requires familiarity with your CI system and test running basics.
 
 ---
 
 ## Step-by-Step Instructions
 
-<Steps>
-<Step title="Run GoogleTest in CI">
-Execute your compiled GoogleTest binary within your CI job script as you would locally. Because GoogleTest returns an exit code indicative of success or failure, the CI system can detect test pass/fail status reliably.
+### 1. Build Your Tests for CI
 
-Example invocation:
+Ensure your tests build correctly on the CI agents. Use CMake or your build system to compile GoogleTest and your test code.
 
-```bash
-./my_test_binary
-```
+**Actions:**
+- Configure your CI build scripts to fetch GoogleTest (via submodule, FetchContent, or installed library).
+- Compile GoogleTest and your tests with C++17 support as required.
 
-GoogleTest's return codes:
+**Verification:**
+- The test executable is successfully created and available to run.
 
-- 0: All tests passed.
-- 1: One or more tests failed or other test failures.
+### 2. Run Tests with GoogleTest Command-Line Options
 
-<Check>
-Always ensure your CI job captures and checks your test binary's exit code to decide pass/fail status.
-</Check>
+Running tests automatically requires invoking your test binaries in the CI environment.
 
-</Step>
+**Actions:**
+- Invoke your test executable with `--gtest_output=xml:<path>` to generate machine-readable XML reports.
+- Use `--gtest_filter` to select which tests to run when needed, e.g., `--gtest_filter=MyTestSuite.*`.
 
-<Step title="Enable Machine-Readable Output">
-To integrate with CI tools that parse test reports, use GoogleTest's built-in XML output feature for JUnit-style reports.
+Example command:
 
-Add the flag:
-
-```bash
---gtest_output=xml:<path_to_report>/report.xml
-```
-
-Example:
-
-```bash
+```sh
 ./my_test_binary --gtest_output=xml:reports/test_results.xml
 ```
 
-The generated XML file can be consumed by most CI platforms' test report viewers.
+**Verification:**
+- XML report file is created in the specified location.
+- Console output includes test summary (e.g., passed, failed, skipped counts).
 
-<Tip>
-Set up your CI environment to archive or upload the generated report.xml for analysis.
-</Tip>
+### 3. Configure Reporting to Your CI System
 
-</Step>
+Most CI systems support importing JUnit-compatible XML test reports.
 
-<Step title="Filter and Select Tests for CI Runs">
-To control which tests run in your CI pipeline, use GoogleTest's filtering flag:
+**Actions:**
+- Configure your CI job to collect the XML files generated by GoogleTest (e.g., `test_results.xml`).
+- Wire the reports into the CI test reporting plugins or built-in features.
 
-```bash
---gtest_filter=<test_suite_name>.<test_name>
-```
+**Tips:**
+- Use relative paths inside CI to ensure reports are collected regardless of workspace location.
+- Configure test report retention to keep historical results.
 
-Supports wildcards (`*`, `-`) to include or exclude tests.
+### 4. Use Test Sharding for Parallel Execution
 
-Example: Run all tests except slow integration tests:
+For large test suites, distribute tests across multiple CI agents to reduce execution time.
 
-```bash
-./my_test_binary --gtest_filter=-*IntegrationTest.*
-```
-
-<Note>
-Use test filtering to minimize CI runtime while focusing on critical tests.
-</Note>
-
-</Step>
-
-<Step title="Customize Test Behavior for CI">
-To improve CI reliability and diagnosing failures, leverage GoogleTest flags:
-
-- `--gtest_repeat=N` to repeat tests multiple times, useful for catching flaky tests.
-- `--gtest_shuffle` to run tests in a random order, detecting order dependencies.
-- `--gtest_break_on_failure` to pause execution immediately on first test failure (useful in debugging).
+**Actions:**
+- Set the environment variables `GTEST_TOTAL_SHARDS` and `GTEST_SHARD_INDEX` in your CI job configuration.
+- Run the same test binary on multiple agents, each with a distinct shard index.
 
 Example:
 
-```bash
-./my_test_binary --gtest_repeat=3 --gtest_shuffle
+| Agent | GTEST_TOTAL_SHARDS | GTEST_SHARD_INDEX |
+|-------|--------------------|-------------------|
+| 1     | 4                  | 0                 |
+| 2     | 4                  | 1                 |
+| 3     | 4                  | 2                 |
+| 4     | 4                  | 3                 |
+
+**Verification:**
+- Each shard reports results for a unique subset of tests.
+- Combined reports show full test coverage.
+
+### 5. Capture Test Artifacts and Logs
+
+Store logs and other test artifacts in your CI system for debugging failures.
+
+**Actions:**
+- Redirect standard output and error of test runs to log files.
+- Configure the CI to archive logs and test reports as artifacts.
+
+Example:
+
+```sh
+./my_test_binary --gtest_output=xml:reports/test_results.xml > logs/test.log 2>&1
 ```
 
-</Step>
+### 6. Set Failures as CI Failures
 
-<Step title="Address Platform-Specific Considerations">
-Different OS environments may require slight configuration changes:
+Ensure the CI pipeline fails when tests fail.
 
-- **Linux/macOS**: Ensure shared libraries (like pthread if applicable) are found correctly.
-- **Windows**: Use the gtest_main or gmock_main libraries to simplify main() handling. Be cautious about runtime library consistency (static vs dynamic).
+**Actions:**
+- Make sure the test runner command returns a non-zero exit code upon failures.
+- Configure the CI job to treat non-zero exit codes as failures.
 
-See [Installation (All Platforms)](/getting-started/essential-setup/installation-multiple-platforms) for detailed build guidance per OS.
+GoogleTest returns `0` for successful run, `1` otherwise.
 
-</Step>
+### 7. Optional: Filter Tests Dynamically
 
-<Step title="Troubleshoot CI Test Failures">
-Common issues in CI integration include:
+Control which tests run by filter expressions directly in your CI setups.
 
-- **Test discovery failures**: Verify tests are properly linked and available in the binary.
-- **Linker/runtime mismatches**: On Windows, runtime library mismatches can cause failures.
-- **Uninteresting mock calls warnings/failures**: Use `NiceMock` or `StrictMock` appropriately to manage mock call strictness.
-- **Permissions and environment variables**: Ensure the CI environment can execute tests and read/write output files.
+Example:
 
-Use verbose output flags for diagnosis:
-
-```bash
-./my_test_binary --gtest_verbose=info
+```sh
+./my_test_binary --gtest_filter=MyTestSuite.TestA:OtherSuite.*-OtherSuite.IgnoredTest
 ```
 
-Refer also to the [Troubleshooting & Common Issues](/getting-started/quickstart-and-troubleshooting/troubleshooting-validation) page.
+Use this to speed up test runs or isolate problem areas.
 
-</Step>
 
-<Step title="Verify Successful CI Integration">
-Confirm tests execute, generate results, and that your CI platform processes the XML report correctly.
+## Practical Tips & Best Practices
 
-Typical Success Indicators:
-
-- CI job exits with code 0 when tests pass.
-- Collect and display of test reports from generated XML.
-- No unexpected flakiness or environment-caused failures.
-
-</Step>
-
-</Steps>
+- **XML Output Location:** Keep XML outputs in a dedicated folder that your CI archives, e.g., `reports/`.
+- **Avoid Overlong Logs:** Redirect console logs to files if they are verbose; use CI features to display summary.
+- **Consistent Test Names:** Follow [naming conventions](../faq.md#why-should-test-suite-names-and-test-names-not-contain-underscore) to avoid naming conflicts and errors.
+- **Set Up Global Environments with Care:** If using global test environments, be aware their `SetUp()` and `TearDown()` run per test iteration.
+- **Fail Fast in CI:** Use `--gtest_fail_fast` to stop tests immediately on failure for quicker feedback.
 
 ---
 
-## Examples & Usage
+## Troubleshooting Common Issues
 
-### Example CI Command
+### Tests Not Running or XML Not Generated
 
-A typical CI shell snippet for running tests with reports:
+- Verify your test executable is runnable on the CI agent.
+- Confirm `--gtest_output=xml:<path>` is correctly specified.
+- Check file path permissions and existence of folder.
 
-```bash
-mkdir -p reports
-./my_test_binary --gtest_output=xml:reports/test_results.xml
-```
+### CI Not Recognizing Test Failures
 
-### Example Filtering in CI
+- Make sure your test runner returns proper exit code. GoogleTest does this by default.
+- Confirm CI job fails on non-zero exit code.
 
-Run only fast unit tests, avoiding integration ones:
+### Sharding Not Working as Expected
 
-```bash
-./my_test_binary --gtest_filter=*-*IntegrationTest.*
-```
+- Check that `GTEST_TOTAL_SHARDS` and `GTEST_SHARD_INDEX` are set properly and are integers.
+- Ensure all shards are executed and reports are collected.
 
-### Example Integration with Jenkins (Declarative Pipeline)
+### Disabled Tests Executing Unexpectedly
 
-```groovy
-pipeline {
-  agent any
-  stages {
-    stage('Build') {
-      steps {
-        sh 'cmake --build build --config Release'
-      }
-    }
-    stage('Test') {
-      steps {
-        sh './build/my_test_binary --gtest_output=xml:reports/test_results.xml'
-        junit 'reports/*.xml'
-      }
-    }
-  }
-}
-```
-
----
-
-## Troubleshooting & Tips
-
-<AccordionGroup title="Common CI Integration Issues">
-<Accordion title="Tests Not Running or Found in CI">
-- Verify test binaries are built and executable in the CI environment.
-- Check if necessary runtime dependencies (shared libs) are installed or packaged.
-- Confirm no environment variables differ that may disable tests.
-</Accordion>
-
-<Accordion title="Unexpected Test Failures on CI but Not Locally">
-- Flaky tests may fail due to timing or resource constraints.
-- Use `--gtest_repeat` and `--gtest_shuffle` locally to reproduce order or timing issues.
-- Add detailed logs or `--gtest_break_on_failure` locally.
-</Accordion>
-
-<Accordion title="XML Report Not Detected by CI System">
-- Confirm the `--gtest_output=xml:` path is in the directory your CI expects.
-- Check file permissions and path validity.
-- Enable verbose logging `--gtest_verbose=info` for hints.
-</Accordion>
-
-<Accordion title="Mock-Related Runtime Failures in CI">
-- If unexpected or uninteresting mock calls cause failings, try wrapping mocks with `NiceMock`.
-- Use GoogleMock's diagnostics to identify mock mismatches.
-</Accordion>
-
-</AccordionGroup>
+- Verify you are not using the `--gtest_also_run_disabled_tests` flag unintentionally.
 
 <Tip>
-Incorporate test output archiving or publishing steps in your CI configuration to preserve test history.
+GoogleTest recommends giving your **test suite** names and **test names** without underscores to avoid internal conflicts in CI environments. See the [FAQ](../faq.md#why-should-test-suite-names-and-test-names-not-contain-underscore) for details.
 </Tip>
 
----
 
-## Next Steps & Related Documentation
+## Next Steps & Related Content
 
-- Explore [Installation and Setup](/guides/getting-started/install-and-setup) to ensure your environment supports CI builds.
-- Review [Organizing and Running Tests](/guides/getting-started/organizing-tests) to better structure test suites for CI.
-- See [Debugging Test Failures and Output Customization](/guides/integration-and-best-practices/debugging-and-output) for advanced troubleshooting.
-- For mocking users, consult [Setting Expectations and Verifying Interactions](/guides/mocking-in-action/setting-expectations) to manage mock-related CI errors.
-- Consult your CI platform's documentation on JUnit XML report integration.
+- **Build Integration:** Follow the [Build Integration guide](../guides/integration-and-best-practices/build-integration.md) to connect GoogleTest with your build system.
+- **Test Performance:** Learn how to optimize and parallelize your tests in the [Test Performance guide](../guides/integration-and-best-practices/test-performance.md).
+- **Writing Your First Test:** If new, see [Writing and Running Your First Test](../guides/getting-started/quickstart-testing.md).
+- **Mocking:** Explore [Mocking Your First Class or Function](../guides/getting-started/first-mock.md) for automating behavior verification in your CI.
+- **Troubleshooting:** Use the [Common Issues troubleshooting](../getting-started/troubleshooting/common-issues.md) guide to resolve CI integration problems.
 
 ---
